--- a/package.json
+++ b/package.json
@@ -5,21 +5,28 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@reduxjs/toolkit": "^2.5.0",
+    "assert": "^2.1.0",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
+    "browserify-zlib": "^0.2.0",
     "cra-template": "1.2.0",
     "font-awesome": "^4.7.0",
+    "https-browserify": "^1.0.0",
     "react": "^19.0.0",
     "react-color": "^2.19.3",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.0.2",
+    "react-router-dom": "^7.2.0",
     "react-scripts": "5.0.1",
     "react-select-country-list": "^2.2.3",
     "recharts": "^2.15.1",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "url": "^0.11.4",
+    "util": "^0.12.5",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
